# praxsmith

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  abstract.txt  compose.yaml  example_docs.svx  naems  package-lock.json  package.json  svelte.config.js  temp.txt  todo.txt  vite.config.ts
.github/workflows/: docker-publish.yml
crates/praxsmth-core/: Cargo.toml  world.txt
crates/praxsmth-core/src/: anyhow_ext.rs  api.rs  definitions.rs  expressions.rs  lib.rs  main.rs  parser.rs  praxsmth.pest  queries.rs  store.rs  types.rs  values.rs  world.rs
crates/praxsmth-core/tests/: effects.rs  world.rs
crates/praxsmth-wasm/: Cargo.toml
crates/praxsmth-wasm/src/: lib.rs
docker/: nginx.conf
examples/actor_refs/: types.txt  world.txt
examples/escalating_argument/: types.txt  world.txt
examples/fields/: types.txt  world.txt
examples/gossip_chain/: types.txt  world.txt
examples/robust/: types.txt
examples/simple/: types.txt  world.txt
praxsmth/: examples.txt  examples_todo.txt  types.txt  world.txt
praxsmth/src/: definitions.rs  lib.rs  parser.rs  praxsmth.pest  sim.rs  store.rs  types.rs  world.rs
praxsmth/src/definitions/: types.rs  world.rs
praxsmth/src/parser/: types.rs  world.rs
praxsmth/src/world/: api.rs  interface.rs
praxsmth/tests/: world.rs
prototype/: main.py
prototype/praxsmth/: graph.py
src/: app.html
src/lib/: Actions.svelte  Cast.svelte  Chat.svelte  CodeEditor.svelte  DebugPanel.svelte  Editor.svelte  ErrorPane.svelte  defaults.ts  praxsmth-lang.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
(+12 files in other folders)
