[package]
name = "praxsmth-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
praxsmth = { path = "../praxsmth-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify = { version = "0.4", default-features = false, features = ["js"] }
console_error_panic_hook = "0.1"
js-sys = "0.3.97"
web-sys = { version = "0.3", features = ["Window"] }
log = "0.4.29"
console_log = "1.0.0"
